--- a/octofit-tracker/frontend/public/index.html
+++ b/octofit-tracker/frontend/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OctoFit Tracker</title>
+    <!-- Add favicon and theme color -->
+    <link rel="icon" href="/favicon.png" />
+    <meta name="theme-color" content="#0d6efd" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
